# simple-password_vault

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
.github/: unit-test.yaml
.github/workflows/: unit-test.yaml
app/: CMakeLists.txt
app/src/: common.h  hashtable.c  hashtable.h  main.c  parse.c  parse.h  passwdPromp.h  psm.c  psm.h
app/src/command/: add.c  add.h  command.c  command.h  del.c  del.h  show.c  show.h
df_psm/: CMakeLists.txt  psm.h
df_psm/src/: account.c  account.h  email.c  email.h  file.c  file.h  tag.c  tag.h
df_psm/src/crypto/: chacha20.c  chacha20.h  sha256.c  sha256.h  util.h
df_psm/tests/: main_test.c
